# we-ve-got-a-problem

./: README.md
20201030-nixpkgs-pytorch/: CMakeLists.txt  README.md  default-cuda.nix  default-fixed.nix  default.nix  main.cpp
20201030-nixpkgs-pytorch-fix/: CMakeLists.txt  default.nix  main.cpp
